Make type corrections

--- a/content/v-adhesives/29.md
+++ b/content/v-adhesives/29.md
@@ -211,7 +211,7 @@ The investigation into adhesives for thread-by-thread tear mending and suitable 
 
 [^1]: Details about the general technique were described by Winfried Heiber, the pioneer of the thread-by-thread tear-mending method ({% cite 'Heiber 1996' %}, {% cite 'Heiber 2003' '' '2003' %}; {% cite 'Heiber et al. 2012' %}).
 
-[^2]: Compare with statements by Christina Young published in context of the 2003 Alternatives to Lining Conference ({% cite 'Young 2003' '55–56' %}), as well as {% cite 'Flock 2014' %}, {% cite 'Flock et al. 2021' %}, {% cite 'Flock 2020' %}, and {% cite 'Flock et al. 2022' %}.
+[^2]: Compare with statements by Christina Young published in context of the 2003 Alternatives to Lining Conference ({% cite 'Young 2003' '55–56' %}), as well as {% cite 'Flock 2014' %}, {% cite 'Flock 2020' %}, {% cite 'Flock et al. 2021' %},  and {% cite 'Flock et al. 2022' %}.
 
 [^3]: The publications of Winfried Heiber are basic information sources about the general technique of single-thread bonding: see, for example, {% cite 'Heiber 1996' %}, {% cite 'Heiber 2003' '' '2003' %}; and {% cite 'Heiber et al. 2012' %}. Individual essential aspects and more recent developments have been summarized by Petra Demuth ({% cite 'Demuth 2020' %}). Details of the bonding procedure can be found in publications by Hannah Flock ({% cite 'Flock 2020' '23–28' %}; {% cite 'Flock et al. 2022' '173–80' %}).
 
@@ -223,9 +223,9 @@ The investigation into adhesives for thread-by-thread tear mending and suitable 
 
 [^7]: This means that, for example, the optical density, light refraction, transparency, translucency, or even opacity, and degree of gloss of the bonded area ideally correspond to the individual optical surface properties of the surrounding fabric.
 
-[^8]: Compare to {% cite 'Flock 2014' %}; {% cite 'Flock et al. 2019' %}; {% cite 'Flock et al. 2021' %}; and {% cite 'Flock et al. 2021' %}.
+[^8]: Compare to {% cite 'Flock 2014' %}; {% cite 'Flock et al. 2019' %}; and {% cite 'Flock et al. 2021' %}.
 
-[^9]: For more details on scale effects, see, for example, {% cite 'Flock 2020' '51, 55' %}; {% cite 'Flock et al. 2021' %}; {% cite 'Flock et al. 2021' %}; and {% cite 'Flock 2014' '130–39' %}.
+[^9]: For more details on scale effects, see, for example, {% cite 'Flock 2020' '51, 55' %}; {% cite 'Flock et al. 2021' %}; and {% cite 'Flock 2014' '130–39' %}.
 
 [^10]: This problem has already been published ({% cite 'Flock 2014' %}); a more recent article in English describes the facts in the context of inevitable scattering results in bonding qualities ({% cite 'Flock et al. 2021' %}).
 
