--- a/content/vi-interventions/36.md
+++ b/content/vi-interventions/36.md
@@ -27,11 +27,11 @@ Alwar (a former principality) is a prominent city in the state of Rajasthan and 
 
 {% figure 'fig-36-1' 'pdf-float-top' %}
 
-The Alwar museum is known for its unique, varied collection; it houses around fourteen thousand objects, including textiles, miniatures, rare books, canvas paintings, wooden objects, furniture, a natural history collection, metalwork, arms and armor, decorative art, and terracotta and stone objects. The collection also has twenty-six canvas paintings; twenty-four were on display at the time of our work, while two were kept in storage.
+The Alwar Museum is known for its unique, varied collection; it houses around fourteen thousand objects, including textiles, miniatures, rare books, canvas paintings, wooden objects, furniture, a natural history collection, metalwork, arms and armor, decorative art, and terracotta and stone objects. The collection also has twenty-six canvas paintings; twenty-four were on display at the time of our work, while two were kept in storage.
 
 These paintings are excellent works made locally by artisans under the patronage of the Alwar maharajas. The founder of the kingdom didn’t have time to concentrate on arts and crafts, but his successors gave patronage to Dalchand, Baldev, and Saligram. Although Dalchand and Saligram came from Jaipur, they started the Alwar school of paintings in the eighteenth century. This school was developed from the Jaipur school of paintings and had a Mughal influence. Dalchand had worked in the Rajput style, and Baldev was expert in the Mughal school, so the amalgamation of these two styles gradually came to be known as the Alwar school of paintings.
 
-Maharaja Viney Singh was the greatest art enthusiast in the Alwar royal family tree and was himself a painter, calligrapher, and binder. During his time, Aga Mirza Khan was also a great calligrapher. Similarly, Natha Khan Darvesh and Abdul Rehman were expert in making figures and designs at the borders of paintings. The paintings displayed at the Alwar museum were made during the reign of Maharaja Singh (1815–57) and have great historical significance ([fig. 36.2](#fig-36-2)).
+Maharaja Viney Singh was the greatest art enthusiast in the Alwar royal family tree and was himself a painter, calligrapher, and binder. During his time, Aga Mirza Khan was also a great calligrapher. Similarly, Natha Khan Darvesh and Abdul Rehman were expert in making figures and designs at the borders of paintings. The paintings displayed at the Alwar Museum were made during the reign of Maharaja Singh (1815–57) and have great historical significance ([fig. 36.2](#fig-36-2)).
 
 {% figure 'fig-36-2' %}
 
