--- a/content/viii-posters/51.md
+++ b/content/viii-posters/51.md
@@ -91,7 +91,7 @@ Results ([table 51.3](#table-51-3)) evidenced the influence of lining materials 
 
 [Figure 51.2](#fig-51-2-a) shows the restraint tests of different lining fabrics and glue-paste linings. While the force development in the restrained raw canvases when subjected to different RH was similar for both canvas densities tested, significant differences can be observed when the same textile is used as lining fabric in combination with the different glue-paste formulations. For example, adhesive mixtures containing rye Type 70 (7% protein content) develop twice the force when used in combination with close-weave fabrics than when used with open-weave fabrics over a wide range of RH conditions ([fig. 51.2b](#fig-51-2-b)). These values drop to half for both open- and close-weave fabrics when Type 55 (Manitoba) wheat flour is used ([fig. 51.2c](#fig-51-2-c)). In addition, it was observed that among all the combinations tested, closely woven canvases and semiwhole flour–based recipes induce the highest contraction forces in restrained samples, leading to significant risk of cracking and delamination ([fig. 51.3](#fig-51-3)).
 
-{% figuregroup '3' 'fig-51-2-a, fig-51-2-b, fig-51-2-c' '**Figure 51.2** Restraint tests of different lining fabrics and glue-paste linings. (a) Force development of open- and close-weave lining canvases (alone) when subjected to different RH. (b) Force development of rye T70, linings as a function of the weave geometry of the lining canvas when subjected to different RH. &#40;c) Force development of Manitoba wheat T55, linings as a function of the weave geometry of the lining canvas when subjected to different RH. Images: Courtesy of the research team' 'pdf-two-column pdf-no-bottom-border' %}
+{% figuregroup '3' 'fig-51-2-a, fig-51-2-b, fig-51-2-c' '<span class="q-figure__label">Figure 51.2</span> Restraint tests of different lining fabrics and glue-paste linings. (a) Force development of open- and close-weave lining canvases (alone) when subjected to different RH. (b) Force development of rye T70, linings as a function of the weave geometry of the lining canvas when subjected to different RH. &#40;c) Force development of Manitoba wheat T55, linings as a function of the weave geometry of the lining canvas when subjected to different RH. Images: Courtesy of the research team' 'pdf-two-column pdf-no-bottom-border' %}
 
 {% figure 'fig-51-3' 'pdf-two-column' %}
 
