--- a/content/vi-interventions/32.md
+++ b/content/vi-interventions/32.md
@@ -10,7 +10,7 @@ contributor:
     last_name: "Poggendorf"
     title: "Head of Conservation, Neue Pinakothek and Sammlung Schack"
     affiliation: "Doerner Institut, Bayerische Staatsgemäldesammlungen, Munich"
-abstract: "The collections of the Neue Pinakothek and the Sammlung Schack—the two important collections of nineteenth-century art in Munich—contain a large number of paintings that have remained relatively untouched since their creation. Initially this was just an empirical observation by conservators. Despite incomplete data, a study verified that out of more than 1,700 paintings investigated, about seventy percent are unlined. This has been proven through an evaluation of technological information, and restoration reports. One of the results of this study is that conservators decided—in addition to traditional lining—in favor of very restrained interventions early on. The documented restoration techniques, including lining and other treatments, are generally explained and contextualized in relation to developments in the field of paintings conservation. The results of this study accord with the trend toward minimal intervention that began in German-speaking countries more than forty years ago."
+abstract: "The collections of the Neue Pinakothek and the Sammlung Schack—two important collections of nineteenth-century art in Munich—contain a large number of paintings that have remained relatively untouched since their creation. Initially this was just an empirical observation by conservators. Despite incomplete data, a study verified that out of more than 1,700 paintings investigated, about seventy percent are unlined. This has been proven through an evaluation of technological information and restoration reports. One of the results of this study is that conservators decided—in addition to traditional lining—in favor of very restrained interventions early on. The documented restoration techniques, including lining and other treatments, are generally explained and contextualized in relation to developments in the field of paintings conservation. The results of this study accord with the trend toward minimal intervention that began in German-speaking countries more than forty years ago."
 ---
 
 ## Introduction
@@ -167,7 +167,7 @@ Great appreciation is due to my teachers Winfried Heiber and Hans Brammer, who i
 
 [^9]: If only a time period was available, not a specific year of creation or acquisition, these data are shown in the graphs as average values. Percentages have been rounded for the sake of legibility. 
 
-[^10]: *Paste* and *wax* are the usual collective terms, although mixtures were generally used; see note 12 below.
+[^10]: *Paste* and *wax* are the usual collective terms, although mixtures were generally used; see note 13 below.
 
 [^11]: The first heated vacuum table was acquired in 1959 ({% cite 'Wolters 1960' %}).
 
