--- a/content/viii-posters/49.md
+++ b/content/viii-posters/49.md
@@ -105,7 +105,7 @@ In addition to assessing the efficacy of wax-resin poulticing through weight gai
 
 SEM images ([fig. 49.4](#fig-49-4)) visualized morphology changes on the surface. With each use, the individual fibers become increasingly less distinct, presumably as the wax resin coats and fills the pores. The loss of definition with each use could be attributed to redistribution of the wax resin already poulticed into the tissue upon re-exposure to solvent, the continued filling of tissue interstices with freshly solubilized/softened wax resin, or a combination of both.
 
-{% figuregroup '2' 'fig-49-4-a, fig-49-4-b, fig-49-4-c, fig-49-4-d' '**Figure 49.4** SEM BSE images of unused tissue: (a) control, (b) after iteration 1, &#40;c) after iteration 2, (d) after iteration 3. (Surface morphology changes visualized in SEM BSE images captured at 137× by Dr. Judy Rudolph, volunteer conservation scientist, SRAL, Winterthur Museum. Images: Judy Rudolph' %}
+{% figuregroup '2' 'fig-49-4-a, fig-49-4-b, fig-49-4-c, fig-49-4-d' '**Figure 49.4** SEM BSE images of unused tissue: (a) control, (b) after iteration 1, &#40;c) after iteration 2, (d) after iteration 3. (Surface morphology changes visualized in SEM BSE images captured at 137× by Dr. Judy Rudolph, volunteer conservation scientist, SRAL, Winterthur Museum. Images: Julianna Ly' %}
 
 BET analysis yielded a surprising result ([fig. 49.5](#fig-49-5)). An increase in measured surface area was observed after the first use, from 0.0982 <sup>2</sup>/g (unused control) to 0.4315 <sup>2</sup>/g (after single use). Contrary to the weight-gain data and SEM images, both of which confirmed that the tissue had picked up wax resin, BET suggested the porosity increased. However, after the first iteration, BET data trended as expected: with each iterative use, the measured surface area decreased as more wax resin was poulticed into the tissue.
 
@@ -117,7 +117,7 @@ While this publication was in preparation, further analysis of the BET data reve
 
 The 1:9 mixture of acetone and petroleum benzine gave the largest weight increase, followed by neat petroleum benzine ([fig. 49.6a](#fig-49-6-a)). These results demonstrate a clear relationship between the choice of solvent and amount of poulticed material. The 1:9 mixture likely performed best due to acetone’s ability to solubilize resinous components in the wax-resin mixture. As expected, neat acetone resulted in negligible weight gain given its chemical incompatibility with nonpolar, aliphatic compounds. Importantly, this latter result also suggests that the chemical groups making up the Evolon CR (the polyamide and polyester fibers) have minimal effects in poulticing wax resin. The efficacy of poulticing appears to come primarily from solvent choice. Py-GCMS analysis ([fig. 49.6b](#fig-49-6-b)) of the poulticed material showed the characteristic Gaussian distribution of hydrocarbon peaks from the wax component. As expected, the wax-based hydrocarbon peaks increased in intensity as the ratio of petroleum benzine to acetone increased.
 
-{% figuregroup '2' 'fig-49-6-a, fig-49-6-b' '**Figures 49.6** (a) Weight increases (in grams) for each tissue exposed to the solvents or mixtures tested. (b) Py‑GCMS analysis of the three solvents: solvent 1 is 100% acetone, solvent 2 is 1:1 acetone and petroleum benzine, and solvent 3 is 1:9 acetone and petroleum benzine. (Py-GCMS analysis conducted by Dr. Chris Petersen, volunteer conservation scientist and affiliated associate professor, SRAL, Winterthur Museum.) Images: (a) Julianna Ly and Tracy Liu; (b) Chris Petersen, Tracy Liu' %}
+{% figuregroup '2' 'fig-49-6-a, fig-49-6-b' '**Figures 49.6** (a) Weight increases (in grams) for each tissue exposed to the solvents or mixtures tested. (b) Py‑GCMS analysis of the three solvents: solvent 1 is 100% acetone, solvent 2 is 1:1 acetone and petroleum benzine, and solvent 3 is 1:9 acetone and petroleum benzine. (Py-GCMS analysis conducted by Dr. Chris Petersen, volunteer conservation scientist and affiliated associate professor, SRAL, Winterthur Museum.) Images: Julianna Ly' %}
 
 In summary, the results from all experiments indicate that Evolon CR is an effective material for reducing wax resin; however, the tissue alone never resulted in complete removal of the adhesive.
 
