Fix spacing on figure group labels

--- a/content/i-history/4.md
+++ b/content/i-history/4.md
@@ -133,7 +133,7 @@ In the 1980s, several Impressionist paintings, accessioned from the Princes Gate
 
 Paul Cezanne’s *Turning Road (Route Tournante)*, ca. 1905 (P.1978.PG.61), was treated in 1980 using a low-pressure, cold-lining technique learned from Mehra in 1978. The adhesive, Primal AC-634 thickened with Natrosol, was applied through a mesh screen. One particular concern was the danger of staining and potentially darkening the ground with the adhesive. The report describes painstaking spectrophotometry readings taken before and after treatment. The lining fabric was polyester, Permawear 122, and the report contains correspondence with the manufacturer. The deformations out of plane ([fig. 4.9a](#fig-4-9-a)) were treated prior to lining by misting with water and drying on the cold-lining table at minimal pressure (8.5 cm water), repeated three times with local weighting. The treatment was deemed a success and was subsequently chosen to illustrate a book in Hedley’s memory ({% cite 'Hedley 1993' %}). Although it was incorrectly described as a Plextol lining, the success of the flattening moisture treatment and the lining in retaining the improved surface is commented on in the picture caption. Our expert panel agreed the lining was extremely successful in terms of correcting overall distortion while keeping a very light, unlined feel ([fig. 4.9b](#fig-4-9-b)). Only one area of lifting of the lining on the turnover edge was identified, but this was not felt to be an indicator of more widespread failure concerns.
 
-{% figuregroup '2' 'fig-4-9-a, fig-4-9-b' '**Figure 4.9** Paul Cezanne (French, 1839–1906), *Turning Road (Route Tournante)*, ca. 1905. Oil on canvas, 73 x 92 cm (28 3/4 x 36 1/4 in.). The Samuel Courtauld Trust, The Courtauld Gallery, London, P.1978.PG.61. (a) Raking light picture taken before treatment in 1980. (b) Current state of the painting photographed in normal light. Image: The Courtauld, London (Samuel Courtauld Trust) / Photo: © The Courtauld' %}
+{% figuregroup '2' 'fig-4-9-a, fig-4-9-b' '<span class="q-figure__label">Figure 4.9</span> Paul Cezanne (French, 1839–1906), *Turning Road (Route Tournante)*, ca. 1905. Oil on canvas, 73 x 92 cm (28 3/4 x 36 1/4 in.). The Samuel Courtauld Trust, The Courtauld Gallery, London, P.1978.PG.61. (a) Raking light picture taken before treatment in 1980. (b) Current state of the painting photographed in normal light. Image: The Courtauld, London (Samuel Courtauld Trust) / Photo: © The Courtauld' %}
 
 Edouard Manet’s *Au Bal—Marguerite de Conflans en Toilette de Bal,* 1870–80 (P.1978.PG.233), was treated the following year, in 1981, to address the buckling of the canvas recorded in raking-light photographs before treatment. Caroline Villers’s recommendation seemed to follow the successful precedent set by the treatment of the Cezanne painting: to carry out a cold-lining at low pressure. A change of plan is described with Villers’s typical understatement: “Although the tacking margin had not seemed to exhibit exceptional sensitivity to moisture . . . the canvas was found to be extremely responsive.”[^21] They switched to using Beva 371 with sailcloth at 60°C–65°C and using 12 "Hg vacuum-envelope pressure. The envelope system was designed to avoid textural changes, and the conservators also removed large slubs and residues from the reverse prior to lining. However, when reviewing the treatment with the aid of archive raking-light images, it did seem that there had been some increased weave emphasis. Despite this, the treatment was published by Hedley as an exemplar treatment the following year ({% cite 'Hedley and Villers 1982' '157' %}). It was interesting to reflect on this treatment with the expert group. It seemed to particularly highlight the change in attitudes toward lining over the thirty-eight years since this painting was treated. The consensus now would be to accept the deformations out of plane and to try to avoid lining for as long as possible.
 
