--- a/content/ii-present-practice/13.md
+++ b/content/ii-present-practice/13.md
@@ -134,7 +134,7 @@ The lining canvas had been cut to size so that it protruded where the original s
 
 In *The Last Judgment*’s final state, the depiction is visible again, and further damage to the painting has been prevented ([fig. 13.7](#fig-13-7-a)). At the same time, the history of the painting and its technological peculiarities remain visible as some reshapeable deformations were left. The tears were visually pushed back using restrained retouching. Despite the extensive intervention in the structure of the painting, it fits well into the cycle without making the other six less damaged, unrestored paintings look inferior.
 
-{% figuregroup '2' 'fig-13-7-a, fig-13-7-b' '**Figure 13.7** *The Last Judgment* after treatment in 2014: (a) verso; and (b) recto. Image: Julia Brandt and Carina Volbracht' %}
+{% figuregroup '2' 'fig-13-7-a, fig-13-7-b' '<span class="q-figure__label">Figure 13.7</span> *The Last Judgment* after treatment in 2014: (a) verso; and (b) recto. Image: Julia Brandt and Carina Volbracht' %}
 
 The lining of a painting always represents a massive—often irreversible—intervention. However, the example of *The Last Judgment* shows that, in rare cases, a lining can be the only way to save a painting from further decay. In this case, lining did not mean abandoning the original stretching system and pressing the support as flat as a board. Even a more careful intervention with respect for the much-cited *Alterswert* (age value) can achieve the desired success.
 
