--- a/content/vii-modern-contemporary/38.md
+++ b/content/vii-modern-contemporary/38.md
@@ -81,7 +81,7 @@ As noted earlier, the current and widely adopted approach to structural repair o
 
 While minimal intervention and authenticity often complement each other in a treatment, that is not always the case. Removing a lining to reveal the original verso is not a minor treatment. Unstretching a painting to replace or modify an original subsupport that is inadequate or actively damaging the painting is not without risk and may end with an unsatisfactory compromise ([fig. 38.4](#fig-38-4-a)).
 
-{% figuregroup '2' 'fig-38-4-a, fig-38-4-b' '**Figure 38.4** (a) Artist-made strainer from 1970 composed of wood, plywood, and particle board, 180.3 x 287 cm (71 x 113 in.). (b) The same strainer, modified in 2018. The effort to keep the original components and achieve adequate structural integrity resulted in a strange hybrid support. Images: Mary H. Gridley' %}
+{% figuregroup '2' 'fig-38-4-a, fig-38-4-b' '<span class="q-figure__label">Figure 38.4</span> (a) Artist-made strainer from 1970 composed of wood, plywood, and particle board, 180.3 x 287 cm (71 x 113 in.). (b) The same strainer, modified in 2018. The effort to keep the original components and achieve adequate structural integrity resulted in a strange hybrid support. Images: Mary H. Gridley' %}
 
 An important strategy for mitigating against the return of old cracks or the creation of new ones involves preventive conservation. The installation of backing boards and handles prevents knocks from the reverse or edges being gripped during transport and installation. More complex interventions include stretcher bar linings or loose-linings for individual paintings. Where appropriate, framing and glazing are good protection, as are wrapping and crating to prevent contact with the face of the painting. Preventive conservation, while perhaps not understood by galleries or collectors to be a whole subspecialty of our profession, is something of which they are very aware. Proper storage, professional shipping, and environmental controls are not just institutional priorities; they have worked their way into the mindsets of commercial galleries, private collectors, and art handling and storage facilities.
 
