--- a/content/iii-open-questions/18.md
+++ b/content/iii-open-questions/18.md
@@ -55,7 +55,7 @@ Among the aims of the project was to get a better understanding of the historica
 
 The project was organized in three parts: a documentary work or study, an experimental study, and the sharing of the research as it was carried out ([fig. 18.2](#fig-18-2-a), [table 18.1](#table-18-1)).
 
-{% figuregroup '1' 'fig-18-2-a, fig-18-2-b, fig-18-2-c' '**Figure 18.2** (a) A recipe for *gacha* used in 1948 by Tomás Pérez Alférez, liner at the Museo del Prado for the lining of an unspecified painting of the Church of San Martín. (b) Fourier transform infrared spectroscopy (FTIR) analysis of the adhesive used to line *El sueño del Patricio Juan* (*Juan the Patrician’s Dream*), by Bartolomé Esteban Murillo. &#40;c) Measure of viscosity in a *gacha* recipe taken during the experimental study in the project. Images: (a) Archivo del Museo Nacional del Prado, (b) Laboratorio de Análisis del Museo Nacional del Prado, &#40;c) Lining Project HAR 2011-24217 and Universidad Politècnica de València.' 'pdf-70-percent-width' %}
+{% figuregroup '1' 'fig-18-2-a, fig-18-2-b, fig-18-2-c' '<span class="q-figure__label">Figure 18.2</span> (a) A recipe for *gacha* used in 1948 by Tomás Pérez Alférez, liner at the Museo del Prado for the lining of an unspecified painting of the Church of San Martín. (b) Fourier transform infrared spectroscopy (FTIR) analysis of the adhesive used to line *El sueño del Patricio Juan* (*Juan the Patrician’s Dream*), by Bartolomé Esteban Murillo. &#40;c) Measure of viscosity in a *gacha* recipe taken during the experimental study in the project. Images: (a) Archivo del Museo Nacional del Prado, (b) Laboratorio de Análisis del Museo Nacional del Prado, &#40;c) Lining Project HAR 2011-24217 and Universidad Politècnica de València.' 'pdf-70-percent-width' %}
 
 {% figure 'table-18-1' %}
 
@@ -99,7 +99,7 @@ Examples of case studies include:
 
 {% figure 'fig-18-4' 'pdf-no-bottom-border' %}
 
-{% figuregroup '2' 'fig-18-5-a, fig-18-5-b' '**Figure 18.5** (a) Recipe for *gacha* used in 1955 by Tomás Pérez Alférez, liner at the Museo del Prado, on the painting shown in fig. 18.4. (b) Cross section of glue-paste lining, corresponding to the left sleeve. Layers from the bottom: (1) glue-paste, (2) ground, (3) black paint. Images: (a) Archivo del Museo Nacional del Prado; (b) Real Academia de Bellas Artes de San Fernando de Madrid (E. Parra, Larco Química y Arte; conservation report: Silvia Viana, Ángeles Solís, and Judit Gasca)' %}
+{% figuregroup '2' 'fig-18-5-a, fig-18-5-b' '<span class="q-figure__label">Figure 18.5</span> (a) Recipe for *gacha* used in 1955 by Tomás Pérez Alférez, liner at the Museo del Prado, on the painting shown in fig. 18.4. (b) Cross section of glue-paste lining, corresponding to the left sleeve. Layers from the bottom: (1) glue-paste, (2) ground, (3) black paint. Images: (a) Archivo del Museo Nacional del Prado; (b) Real Academia de Bellas Artes de San Fernando de Madrid (E. Parra, Larco Química y Arte; conservation report: Silvia Viana, Ángeles Solís, and Judit Gasca)' %}
 
 The two latter paintings have additional canvas strips to widen them. We know that *The Spinners* was lined in 1785 by Jacinto Gómez, and perhaps he carried out the widening of the painting, although its measurements vary from one inventory to another at different periods, probably due to adaptations for specific locations. During the last intervention on the painting, many repaints were detected, covering damage that may have arisen from shrinkage when using a new close-weft canvas or may have been caused by burns during ironing ({% cite 'Macarrón, Calvo, and Gil 2017' %}).
 
