--- a/content/viii-posters/46.md
+++ b/content/viii-posters/46.md
@@ -38,18 +38,18 @@ The research and reconstruction of canvases contributes to the understanding of 
 
 ### El Greco {.pdf-column-break-before}
 
-{% figuregroup '2' 'fig-46-1-a, fig-46-1-b, fig-46-1-c, fig-46-1-d' '**Figure 46.1** El Greco (Greek, 1541–1614), *The Burial of the Count of Orgaz*, 1586. Oil on canvas, 480 × 360 cm (189 × 141 3/4 in.). (a) Piece of original canvas showing weave pattern. (b) Weave draft (de los Rios y Rojas and Socorro 1977). &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a and b) de los Rios y Rojas and Socorro 1977, &#40;c) Lab O, (d) Lab O / João Mariano' %}
+{% figuregroup '2' 'fig-46-1-a, fig-46-1-b, fig-46-1-c, fig-46-1-d' '<span class="q-figure__label">Figure 46.1</span> El Greco (Greek, 1541–1614), *The Burial of the Count of Orgaz*, 1586. Oil on canvas, 480 × 360 cm (189 × 141 3/4 in.). (a) Piece of original canvas showing weave pattern. (b) Weave draft (de los Rios y Rojas and Socorro 1977). &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a and b) de los Rios y Rojas and Socorro 1977, &#40;c) Lab O, (d) Lab O / João Mariano' %}
 
 ### Titian
 
-{% figuregroup '2' 'fig-46-2-a, fig-46-2-b, fig-46-2-c, fig-46-2-d' '**Figure 46.2** Titian (Italian, ca. 1488–1576), *The Vendramin Family*, 1540–45. Oil on canvas, 206 × 288.5 cm (81 1/8 × 113 5/8 in.). (a) Detail of Gabriel’s left hand before cleaning and after retouching. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) National Gallery London, (b and c) Lab O, (d) Lab O / João Mariano' %}
+{% figuregroup '2' 'fig-46-2-a, fig-46-2-b, fig-46-2-c, fig-46-2-d' '<span class="q-figure__label">Figure 46.2</span> Titian (Italian, ca. 1488–1576), *The Vendramin Family*, 1540–45. Oil on canvas, 206 × 288.5 cm (81 1/8 × 113 5/8 in.). (a) Detail of Gabriel’s left hand before cleaning and after retouching. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) National Gallery London, (b and c) Lab O, (d) Lab O / João Mariano' %}
 
 ### Caravaggio
 
-{% figuregroup '2' 'fig-46-3-a, fig-46-3-b, fig-46-3-c, fig-46-3-d' '**Figure 46.3** Caravaggio (Italian, 1571–1610), *The Crucifixion of Saint Andrew*, 1606–7. Oil on canvas, 202.5 × 152.7 cm (79 3/4 × 60 1/8 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Cleveland Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano' %}
+{% figuregroup '2' 'fig-46-3-a, fig-46-3-b, fig-46-3-c, fig-46-3-d' '<span class="q-figure__label">Figure 46.3</span> Caravaggio (Italian, 1571–1610), *The Crucifixion of Saint Andrew*, 1606–7. Oil on canvas, 202.5 × 152.7 cm (79 3/4 × 60 1/8 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Cleveland Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano' %}
 
 ### Velázquez
 
-{% figuregroup '2' 'fig-46-4-a, fig-46-4-b, fig-46-4-c, fig-46-4-d' '**Figure 46.4** Diego Velázquez (Spanish, 1599–1660), *Supper at Emmaus*, 1622–23. Oil on canvas, 123.2 × 132.7 cm (48 1/2 × 52 1/4 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Metropolitan Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano' %}
+{% figuregroup '2' 'fig-46-4-a, fig-46-4-b, fig-46-4-c, fig-46-4-d' '<span class="q-figure__label">Figure 46.4</span> Diego Velázquez (Spanish, 1599–1660), *Supper at Emmaus*, 1622–23. Oil on canvas, 123.2 × 132.7 cm (48 1/2 × 52 1/4 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Metropolitan Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano' %}
 
-{% figuregroup '2' 'fig-46-5-a, fig-46-5-b, fig-46-5-c, fig-46-5-d' '**Figure 46.5** Diego Velázquez (Spanish, 1599–1660), *Education of the Virgin*, 1617–18. Oil on canvas, 168 × 136 cm (66 1/8 × 53 1/2 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Yale University Art Gallery, (b and c) Lab O, (d) Lab O / João Mariano' %}
+{% figuregroup '2' 'fig-46-5-a, fig-46-5-b, fig-46-5-c, fig-46-5-d' '<span class="q-figure__label">Figure 46.5</span> Diego Velázquez (Spanish, 1599–1660), *Education of the Virgin*, 1617–18. Oil on canvas, 168 × 136 cm (66 1/8 × 53 1/2 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Yale University Art Gallery, (b and c) Lab O, (d) Lab O / João Mariano' %}
