Add non-breaking spaces with middle initials

--- a/content/iii-open-questions/16.md
+++ b/content/iii-open-questions/16.md
@@ -5,7 +5,7 @@ short_title: "A Novel Technique to Determine the Strength of Canvas"
 layout: essay
 order: 160
 contributor:
-  - first_name: "Theresa A."
+  - first_name: "Theresa&#60;A."
     last_name: "Bräunig"
     title: "Conservator"
     affiliation: "Old National Gallery, Berlin"
@@ -15,7 +15,7 @@ contributor:
     title: "Professor"
     affiliation: "Stuttgart State Academy of Art and Design"
     sort_as: "2"
-  - first_name: "Dirk A."
+  - first_name: "Dirk&#60;A."
     last_name: "Lichtblau"
     title: "Director"
     affiliation: "Lichtblau e.K., Dresden"
