Ensure all H4 headings are roman

--- a/content/i-history/2.md
+++ b/content/i-history/2.md
@@ -31,7 +31,7 @@ The aim of this paper is to revisit some key concepts in the time-dependent mech
 
 ## Mechanical Response of Paintings in Tension
 
-#### *Stress-Strain Curves*
+#### Stress-Strain Curves
 
 A stress-strain curve is derived from a simple tensile test, and it is often used to characterize the mechanical properties of painting materials. Force and displacement measurements are converted to stress and strain in order to remove the effects of sample geometry. The initial slope of a stress-strain curve in uniaxial tension is a measure of stiffness called the modulus of elasticity, *E*, or Young’s modulus. Experiments in shear mode define the shear modulus, while hydrostatic pressure gives the bulk modulus. For a viscoelastic material, these elastic moduli are time dependent, and the stress-strain relationship is nonlinear due to polymer relaxation during the test. [Figure 2.1](#fig-2-1) shows stress-strain curves from a series of tensile tests performed on free films of an artists oil paint. The results highlight that the modulus decreases with higher temperature and reduced rate of deformation, while the failure strain increases. Despite this trend, there is no simple relationship between stiffness and failure strain for materials in general. A material may be stiff and brittle or compliant and brittle.
 
@@ -41,7 +41,7 @@ A stress-strain curve is derived from a simple tensile test, and it is often use
 
 {% figure 'fig-2-2' 'pdf-two-column' %}
 
-#### *Stress Relaxation*
+#### Stress Relaxation
 
 A relaxation test is another useful experiment for studying time-dependent material properties, and it is particularly relevant to canvas-supported paintings. [Figure 2.3](#fig-2-3) illustrates the different parameters in a stress-relaxation test performed on a Winsor and Newton Foundation White film. The first graph ([fig. 2.3a](#fig-2-3)) shows the strain history as an initial loading ramp, followed by constant strain during measurement of stress relaxation. The second ([fig. 2.3b](#fig-2-3)) shows the loading ramp on a stress-strain curve, and a vertical drop in stress during the constant strain segment. [Figure 2.3c](#fig-2-3) gives the stress relaxation process on a plot of stress versus time, where it appears that stress is approaching equilibration after a sharp initial drop. The final plot ([fig. 2.3d](#fig-2-3)) shows the same data on a log-log scale and highlights that the sample is still relaxing. The results also show similar findings for a repeat test that was performed on the same sample after a twenty-four-hour recovery period. During cyclic load testing on viscoelastic materials, it is important to consider strain history and its effects on repeated measurements.
 
@@ -53,7 +53,7 @@ The stress-relaxation test method outlined in [figure 2.4](#fig-2-4) is the appr
 
 The addition of RH fluctuations in [figure 2.4](#fig-2-4) highlights some further trends in the lined painting response. Sailcloth and linen have no effect on the response of the painting, since the linings do not constrain the paint layers in the direction of applied tension—that is, painting and lining are free to shift across one another. In contrast, the wax-lining impregnates the canvas and constrains the paint layers from shrinking or swelling due to contact with the supporting layers of the painting. The paint layers still respond to RH fluctuations; however, the wax adds surface constraint that prevents movement and a subsequent change in tension measured at the ends of the sample. A more in-depth discussion of the CCI Lining Project is provided by Daly Hartin and colleagues ({% cite 'Daly Hartin et al. 2011' %}); therefore, the following discussion provides more general information regarding the viscoelastic behavior of painting materials.
 
-#### *Time-Temperature Superposition*
+#### Time-Temperature Superposition
 
 Over a wide range of test conditions, it is impractical to summarize tensile data from a viscoelastic material with stress-strain curves. It is also not feasible to measure the full relaxation behavior from glassy to rubbery—a process occurring over many decades—at one temperature, due to equipment limitations and time constraints. In [figure 2.1](#fig-2-1), it is clear that a relationship exists between strain rate and temperature, since increasing the rate by an order of magnitude is equivalent to decreasing temperature by 10°C. This implies that time-temperature superposition (TTS) is a potential tool for efficiently summarizing data ({% cite 'Williams, Landel, and Ferry 1955' %}). To illustrate this method, [figure 2.5a](#fig-2-5) shows a simplified summary of modulus values at three temperatures and four strain rates within a practical test window. This test window is bounded by equipment limitations and practical time available for data collection. [Figure 2.5b](#fig-2-5) shows the result of fixing data at a chosen reference temperature, *T<sub>ref</sub>* = 20°C, and figure 2.5c shows horizontally shifting data at the other temperatures to line up as a single master curve. The result shows a shift from glassy to rubbery behavior over a broader scale than the experiments allowed in direct measurement. Tabulated results of the horizontal shift factor versus temperature allow one to create a master curve at any *T<sub>ref</sub>* of interest within data limits. Defining *T<sub>ref</sub>* at the glass transition temperature, *T<sub>g</sub>*, would also allow comparison with theoretical functions, and possible extrapolation to temperatures beyond the test conditions. There are many reasons why the simple TTS method may not work for certain materials; however, it is a powerful tool when it does.
 
@@ -65,7 +65,7 @@ It is helpful to consider practical situations where the viscoelastic properties
 
 The concepts discussed in this section are often studied using a technique called dynamic mechanical analysis (DMA) ({% cite 'Nielsen and Landel 1994' %}). This can rapidly give modulus data as a function of temperature and frequency using a single sample and show transition regions. Experiments involving tensile tests are typically used when the large-strain response, or failure properties, are of interest.
 
-#### *Ultimate Properties*
+#### Ultimate Properties
 
 The purpose of using tensile test data in studies of artists paints is due to the interest in characterizing their large-strain response, particularly the failure criteria as a function of time and temperature. The related research work of Thor Smith in the 1960s is of interest since it shows the application of TTS to the ultimate properties of plastics and elastomers. Smith clearly summarizes an important finding in one of his many papers on this topic:
 
