--- a/content/ii-present-practice/10.md
+++ b/content/ii-present-practice/10.md
@@ -69,13 +69,13 @@ Geographically, the list of materials used in traditional linings is more or les
 
 Over the centuries, liners have never stopped discussing the selection of the best lining canvas to use, and the search continues to this day—although we now use a more quantitative approach ({% cite 'Young 1999' %}). The selection of the fabric affects the method, the adhesive application, and many other factors.
 
-#### *Close-weave canvases*
+#### Close-Weave Canvases
 
 Liners have used close-weave canvases across many local traditions, including those of Florence, France, the United Kingdom, the Netherlands, Belgium, and Denmark. The shared concept is uniform glue application between the two canvases: the original and the lining. The canvas behaves as a semirigid support stiffened by animal glue, and adhesion is optimized by ironing, which dries the adhesive while applying pressure on the painting surface to flatten deformation or cupping. The glue layer, applied in an even adhesive film (in some traditions quite thickly), carries most of the load of the painting because close-weave fabrics provide poor grip and have high elastic modulus, but develop more mechanical stresses.
 
 Observations from monitoring insect infestations shows an increase of deterioration in close-weave linings due to the fact that insects living in the glue layer are protected from ventilation, light, and predators.
 
-#### *Open-weave canvases*
+#### Open-Weave Canvases
 
 Open-weave fabrics are part of the Italian and Spanish traditions. In Italy, all methods apart from the Florentine apply open-weave canvases. Often, on large, heavy, damaged paintings, two similar fabrics were stretched on the same loom to obtain a stiffer support.
 
@@ -91,7 +91,7 @@ Then I started to study what these ingredients are from a chemical, physical-mec
 
 Apart from the Russian tradition, where only sturgeon glue and some honey were used, all other methods built their recipes using three main groups of ingredients: fillers (wheat and rye flours), materials with adhesive properties (animal gelatins), and additives that modify some of the mechanical properties (honey, molasses, Venetian turpentine, linseed mucilage, vinegar, oxgall, glycerin, oils). I will not focus on this last class of materials because, in reality, they have a marginal role in mechanical behavior in glue-paste linings. Instead, I think it is useful to focus on the two main ingredients: animal gels and flours.
 
-#### *Animal gels*
+#### Animal Gels
 
 These amazing materials are used in many steps of treatment—as an adhesive for facings, a consolidant for paint film decohesion, an ingredient in glue-paste compositions, and as a binder for fillings. In tests over the years, animal glues were chosen for their high strength compared to all synthetic materials. I think it is useful, therefore, to establish some essential information that will guide how and why they can be used ({% cite 'Pearson 2003' %}; {% cite 'Schellmann 2007' %}; {% cite 'Bigi, Panzavolta, and Rubini 2004' %}).
 
@@ -109,7 +109,7 @@ Higher Bloom values provide the opposite: higher viscosity at a given concentrat
 
 Animal glues lose their properties if exposed to high temperature or if reheated too many times.
 
-#### *Flours*
+#### Flours
 
 Liners have used flours from various grains since the beginning. The reason is simple: they were easy to find and prepare, they were (and remain) very cheap, and they provide good adhesion, tack, and a nice stiffness. Their unbelievable mechanical properties ({% cite 'Delcour and Hoseney 2010' %}) have been exploited by humans in thousands of different ways, depending on the materials’ availability and local culture.
 
