--- a/content/vi-interventions/37.md
+++ b/content/vi-interventions/37.md
@@ -96,7 +96,7 @@ In practice, remedial treatment to reduce planar distortions, such as cupped pai
 
 The case studies described below illustrate the application of the mats with mild heat transfer for minimal structural and lining treatments of diverse paintings conducted over a seventeen-year span (2003–20). The operational parameters and practical advantages offered by the new warming nanotechnology and targeted approaches taken in each particular treatment show the broad versatility of the new method and how easily it could be tailored to the specific needs of each case, opening new opportunities for art conservators to refine their treatments within the margins of minimal intervention and risk.
 
-#### *Case study 1: Stabilizing cracks, addressing planar distortions, and strip-lining*
+#### Case study 1: Stabilizing cracks, addressing planar distortions, and strip-lining
 
 Our first example is John E. Stuart’s *Mt. St. Helens from a Hill Back of Portland* (1885).[^3] Planar distortions from cracks and severe cupping had formed in extremely brittle paint and ground layers, and the tacking edges were degraded at the return edge. The scope of structural treatment was to stabilize cracks, reduce or eliminate planar distortions, and reinforce the tacking edges with a strip-lining. Lascaux P550 (20% in naphtha) was introduced into the cracks from the recto in an area with particularly unstable paint and ground cracks. Following full evaporation of the solvent, localized humidification with a small chamber preceded application of localized mild heat transfer at 30ºC for forty minutes, which produced a pliable state, allowing mild pressure to be used for consolidation ([fig. 37.4](#fig-37-4)).
 
@@ -106,25 +106,25 @@ Once unstable areas were treated, the painting was removed from the stretcher fo
 
  {% figure 'fig-37-5' %}
 
-#### *Case study 2: Sustainable treatment of paintings with glue-paste linings*
+#### Case study 2: Sustainable treatment of paintings with glue-paste linings
 
 André Bouys’s *A Woman Knitting* (ca. 1700)[^4] had been flour-paste lined in a prior treatment dating to the late nineteenth century, and that lining was still stable and well adhered. However, the recto had several areas of lifted, cupped, and curled paint caused by animal-glue residues from the facing, probably dating to the relining treatment.
 
 The recto was humidified through a microporous Polartec membrane with a moist blotter. Subsequently, mild heat of 36°C was applied to the recto for forty minutes. Once the paint layers had transitioned to a compliant state, the cupped and curled paint was brought into plane with a heated spatula. Once planarity had been regained, the animal-glue residues were removed from the paint layer.
 
-#### *Case study 3: Targeted remedial treatment of indentations and tears*
+#### Case study 3: Targeted remedial treatment of indentations and tears
 
 Clifford Gleason’s *Still Life in Whites* (1939)[^5] had several indentations and canvas tears, including one large complex H-shape tear. The scope of treatment was to perform remedial treatment while the painting remained on the stretcher. Prior to thread-by-thread mending, the flap edges were temporarily joined with tape bridges. Localized humidification of the verso was followed by mild heat transfer at 40°C for twenty minutes; this was also done at dent sites and in buckled corners. Following the tear repair, humidification and mild heat transfer were again used to achieve planarity of the tear site ([fig. 37.6](#fig-37-6)).
 
 {% figure 'fig-37-6' %}
 
-#### *Case study 4: Targeted remedial treatment of wax-resin lined works*
+#### Case study 4: Targeted remedial treatment of wax-resin lined works
 
 Wax-resin adhesive was widely used for structural treatments until the 1974 Greenwich conference and continued after. When paintings with this treatment history require consolidation or treatment of planar deformations, intervention is problematic without an accurate mild heat source, due to the thermal sensitivity and melting behavior of crystalline waxes where the safe treatment temperature range is just above room temperature (\~20°C) and the critical upper limit is 40°C or lower. The lack of adequate low-temperature devices has led to invasive treatments to reverse the wax-resin linings.
 
 Testing of mild heat transfer on wax-treated paintings is nascent and has been limited to simulated treatments ({% cite 'Markevičius et al. 2017' %}). The preliminary results indicate that gradual mild heat transfer over an extended period of time allows safe and efficient treatment of deformations and dents and reactivation of wax-based adhesives.
 
-#### *Case study 5: Targeted remedial treatment of Beva-lined paintings*
+#### Case study 5: Targeted remedial treatment of Beva-lined paintings
 
 Robert Motherwell’s *Open No.16 in Ultramarine with Charcoal Line* (1968)[^6] was damaged during transport, leaving a 13-centimeter concave dent in the center of the composition and two areas of surface distortions in the lower corners. The work had been previously cold-lined with Beva Gel onto cotton canvas.
 
@@ -132,7 +132,7 @@ A thin profile mat was introduced between the wood stretcher and the canvas vers
 
 Once softened and smoothed, the deformation sites were cooled between two heat sink plates held in place for thirty seconds from either side. The same procedure was used to smooth the large concave dent in the center ({% cite 'Markevicius et al. 2017' %}). 
 
-#### *Case study 6: Sustainable lining using diverse adaptive lining systems*
+#### Case study 6: Sustainable lining using diverse adaptive lining systems
 
 Since 2003, flexible mats have been used in numerous lining treatments: in combination with low-pressure vacuum envelopes for the lining of a seventeenth-century painting by Orazio Gentileschi ({% cite 'Olsson and Markevičius 2017' %}) ([fig. 37.7](#fig-37-7)), a series of six paintings by Kenneth Hudson ({% cite 'Markevičius et al. 2017' %}), and in the 2010 loomed treatment of Veronese’s Petrobelli altarpiece at the National Gallery of Canada ({% cite 'Olsson and Markevičius 2010' %}).
 
